Story/ccls 2176 full app summary (#228)
* story(ccls-2176): interim checkin

* story(ccls-2176): full application summary